remove RunPlan class that wraps Task
