# src/blueapi/service/handler_base.py
@@ -3,7 +3,7 @@ from typing import List, Optional
 
 from blueapi.service.model import DeviceModel, PlanModel, WorkerTask
 from blueapi.worker.event import WorkerState
-from blueapi.worker.task import RunPlan
+from blueapi.worker.task import Task
 from blueapi.worker.worker import TrackableTask
 
 
@@ -37,7 +37,7 @@ class BlueskyHandler(ABC):
         """
 
     @abstractmethod
-    def submit_task(self, task: RunPlan) -> str:
+    def submit_task(self, task: Task) -> str:
         """
         Submit a task to be run on begin_task
         """
